--- a/www/sass/style.scss
+++ b/www/sass/style.scss
@@ -1114,7 +1114,7 @@ a {
         }
     }
 
-    > .download-domain {
+    > .download-domain, > .url-domain {
         user-select: none;
         position: fixed;
         top: 0;
@@ -1390,6 +1390,49 @@ a {
                             text-transform: uppercase;
                         }
                     }
+                }
+            }
+        }
+    }
+
+    > .url-domain {
+        display: block;
+        opacity: 1;
+        >  .modal {
+            position: relative;
+            display: block;
+            transform: translate(-50%, -50%) scale(1);
+            opacity: 1;
+
+            .title {
+                font-size: 18px;
+            }
+
+            input[type="text"] {
+                margin: 12px 0 2px;
+                border: 1px solid rgb(167, 167, 167);
+                padding: 8px 12px;
+                border-radius: 3px;
+                font-size: 15px;
+                font-family: "Roboto";
+            }
+
+            > .progress {
+                display: inline-block;
+                position: absolute;
+                top: 0;
+                left: 0;
+                width: 100%;
+                height: 4px;
+                background-color: rgb(220, 220, 220);
+                > .progress-fill {
+                    position: absolute;
+                    top: 50%;
+                    left: 100%;
+                    width: 50%;
+                    height: 100%;
+                    background-color: rgb(248, 66, 66);
+                    transform: translate(-50%, -50%);
                 }
             }
         }
