--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1680,13 +1680,31 @@ a {
 
 .main > .url-domain > .modal > .progress > .progress-fill {
   position: absolute;
-  top: 50%;
   left: 100%;
+  top: 50%;
   width: 50%;
   height: 100%;
+  border-radius: 20px;
   background-color: #f84242;
+  -webkit-box-shadow: 0 0 10px 5px rgba(255, 85, 156, 0.65);
+          box-shadow: 0 0 10px 5px rgba(255, 85, 156, 0.65);
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
+  -webkit-transition: width 0.8s cubic-bezier(0.22, 1, 0.57, 1);
+  transition: width 0.8s cubic-bezier(0.22, 1, 0.57, 1);
+}
+
+.main > .url-domain > .modal > .progress > .progress-fill.progress-search-search {
+  -webkit-animation: progressbar_search_search_2;
+          animation: progressbar_search_search_2;
+  -webkit-animation-duration: 1.5s;
+          animation-duration: 1.5s;
+  -webkit-animation-delay: 0s;
+          animation-delay: 0s;
+  -webkit-animation-iteration-count: infinite;
+          animation-iteration-count: infinite;
+  -webkit-animation-timing-function: cubic-bezier(0.65, 0, 0.35, 1);
+          animation-timing-function: cubic-bezier(0.65, 0, 0.35, 1);
 }
 
 .behind {
@@ -1869,6 +1887,52 @@ a {
   100% {
     left: 100%;
     width: 0%;
+  }
+}
+
+@-webkit-keyframes progressbar_search_search_2 {
+  0% {
+    left: 0%;
+    width: 0;
+    opacity: 0;
+  }
+  30% {
+    width: 0;
+    opacity: 1;
+  }
+  50% {
+    width: 100%;
+    left: 50%;
+    -webkit-transform: translate(-50%, -50%);
+            transform: translate(-50%, -50%);
+  }
+  100% {
+    left: 50%;
+    width: 100%;
+    opacity: 0;
+  }
+}
+
+@keyframes progressbar_search_search_2 {
+  0% {
+    left: 0%;
+    width: 0;
+    opacity: 0;
+  }
+  30% {
+    width: 0;
+    opacity: 1;
+  }
+  50% {
+    width: 100%;
+    left: 50%;
+    -webkit-transform: translate(-50%, -50%);
+            transform: translate(-50%, -50%);
+  }
+  100% {
+    left: 50%;
+    width: 100%;
+    opacity: 0;
   }
 }
 
