--- a/www/sass/style.scss
+++ b/www/sass/style.scss
@@ -1427,12 +1427,23 @@ a {
                 background-color: rgb(220, 220, 220);
                 > .progress-fill {
                     position: absolute;
-                    top: 50%;
                     left: 100%;
+                    top: 50%;
                     width: 50%;
                     height: 100%;
+                    border-radius: 20px;
                     background-color: rgb(248, 66, 66);
+                    box-shadow: 0 0 10px 5px rgba(255, 85, 156, 0.65);
                     transform: translate(-50%, -50%);
+                    transition: width .8s cubic-bezier(.22, 1, .57, 1);
+
+                    &.progress-search-search {
+                        animation: progressbar_search_search_2;
+                        animation-duration: 1.5s;
+                        animation-delay: 0s;
+                        animation-iteration-count: infinite;
+                        animation-timing-function: cubic-bezier(.65, 0, .35, 1);
+                    }
                 }
             }
         }
@@ -1534,6 +1545,28 @@ a {
     100% {
         left: 100%;
         width: 0%;
+    }
+}
+
+@keyframes progressbar_search_search_2 {
+    0% {
+        left: 0%;
+        width: 0;
+        opacity: 0;
+    }
+    30% {
+        width: 0;
+        opacity: 1;
+    }
+    50% {
+        width: 100%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+    }
+    100% {
+        left: 50%;
+        width: 100%;
+        opacity: 0;
     }
 }
 
