--- a/www/css/style.css
+++ b/www/css/style.css
@@ -31,7 +31,7 @@ body {
   position: relative;
   background-color: #f6f6f6;
   scroll-behavior: smooth;
-  background-image: url("../image/lina.jpg");
+  background-image: url("../image/cute.jpg");
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -118,7 +118,7 @@ a {
   left: 0;
   width: 100vw;
   height: 100vh;
-  background-image: url("../image/lina.jpg");
+  background-image: url("../image/cute.jpg");
   background-repeat: no-repeat;
   background-position: center center;
   background-size: cover;
@@ -1642,11 +1642,6 @@ a {
   text-transform: uppercase;
 }
 
-.main > .url-domain {
-  display: block;
-  opacity: 1;
-}
-
 .main > .url-domain > .modal {
   position: relative;
   display: block;
@@ -1680,10 +1675,11 @@ a {
 
 .main > .url-domain > .modal > .progress > .progress-fill {
   position: absolute;
-  left: 100%;
+  left: 50%;
   top: 50%;
-  width: 50%;
+  width: 0%;
   height: 100%;
+  opacity: 0;
   border-radius: 20px;
   background-color: #f84242;
   -webkit-box-shadow: 0 0 10px 5px rgba(255, 85, 156, 0.65);
@@ -1897,7 +1893,7 @@ a {
     opacity: 0;
   }
   30% {
-    width: 0;
+    width: 20%;
     opacity: 1;
   }
   50% {
@@ -1920,7 +1916,7 @@ a {
     opacity: 0;
   }
   30% {
-    width: 0;
+    width: 20%;
     opacity: 1;
   }
   50% {
