--- a/www/sass/style.scss
+++ b/www/sass/style.scss
@@ -33,7 +33,8 @@ body {
     background-color: rgb(246, 246, 246);
     scroll-behavior: smooth;
 
-    background-image: url("../image/lina.jpg");
+    // background-image: url("../image/lina.jpg");
+    background-image: url("../image/cute.jpg");
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -100,7 +101,8 @@ a {
     width: 100vw;
     height: 100vh;
     
-    background-image: url("../image/lina.jpg");
+    // background-image: url("../image/lina.jpg");
+    background-image: url("../image/cute.jpg");
     background-repeat: no-repeat;
     background-position: center center;
     background-size: cover;
@@ -1396,8 +1398,8 @@ a {
     }
 
     > .url-domain {
-        display: block;
-        opacity: 1;
+        // display: block;
+        // opacity: 1;
         >  .modal {
             position: relative;
             display: block;
@@ -1427,10 +1429,11 @@ a {
                 background-color: rgb(220, 220, 220);
                 > .progress-fill {
                     position: absolute;
-                    left: 100%;
+                    left: 50%;
                     top: 50%;
-                    width: 50%;
+                    width: 0%;
                     height: 100%;
+                    opacity: 0;
                     border-radius: 20px;
                     background-color: rgb(248, 66, 66);
                     box-shadow: 0 0 10px 5px rgba(255, 85, 156, 0.65);
@@ -1555,7 +1558,7 @@ a {
         opacity: 0;
     }
     30% {
-        width: 0;
+        width: 20%;
         opacity: 1;
     }
     50% {
