--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1383,30 +1383,48 @@ a {
   height: 100vh;
   z-index: 999;
   background-color: rgba(0, 0, 0, 0.315);
-  display: none;
-  opacity: 0;
+  display: block;
+  opacity: 1;
   -webkit-transition: opacity .2s linear 0s;
   transition: opacity .2s linear 0s;
+}
+
+.main > .download-domain.hide, .main > .url-domain.hide {
+  opacity: 0;
+}
+
+.main > .download-domain.hide-block, .main > .url-domain.hide-block {
+  display: none;
 }
 
 .main > .download-domain > .modal, .main > .url-domain > .modal {
   position: relative;
   top: 50%;
   left: 50%;
-  -webkit-transform: translate(-50%, -50%) scale(0);
-          transform: translate(-50%, -50%) scale(0);
+  -webkit-transform: translate(-50%, -50%) scale(1);
+          transform: translate(-50%, -50%) scale(1);
   width: 450px;
   background-color: white;
   -webkit-box-shadow: 0 0 12px 0.75px rgba(255, 255, 255, 0.755);
           box-shadow: 0 0 12px 0.75px rgba(255, 255, 255, 0.755);
   border-radius: 8px;
   overflow: hidden;
-  display: none;
-  opacity: 0;
+  display: block;
+  opacity: 1;
   -webkit-transition: opacity 0.2s linear, -webkit-transform 0.35s cubic-bezier(0.11, 1, 0.19, 1);
   transition: opacity 0.2s linear, -webkit-transform 0.35s cubic-bezier(0.11, 1, 0.19, 1);
   transition: transform 0.35s cubic-bezier(0.11, 1, 0.19, 1), opacity 0.2s linear;
   transition: transform 0.35s cubic-bezier(0.11, 1, 0.19, 1), opacity 0.2s linear, -webkit-transform 0.35s cubic-bezier(0.11, 1, 0.19, 1);
+}
+
+.main > .download-domain > .modal.hide, .main > .url-domain > .modal.hide {
+  -webkit-transform: translate(-50%, -50%) scale(0.65);
+          transform: translate(-50%, -50%) scale(0.65);
+  opacity: 0;
+}
+
+.main > .download-domain > .modal.hide-block, .main > .url-domain > .modal.hide-block {
+  display: none;
 }
 
 .main > .download-domain > .modal .cover, .main > .url-domain > .modal .cover {
