--- a/www/sass/style.scss
+++ b/www/sass/style.scss
@@ -58,6 +58,16 @@ a {
     text-decoration: none;
 }
 
+mark {
+    font-family: consolas;
+    font-weight: 600;
+    padding: 2px 4px;
+    color: rgb(78, 78, 78);
+    background-color: rgba(255, 255, 255, 0.363);
+    border-radius: 4px;
+    border: 1px solid rgb(202, 202, 202);
+}
+
 .btn {
     display: flex;
     flex-direction: column;
@@ -298,11 +308,14 @@ a {
         flex-direction: column;
         align-items: center;
         > h1 {
+            padding: 5px 12px;
             width: fit-content;
             font-family: "Ubuntu";
             font-size: 21px;
             font-weight: 500;
             color: rgb(11, 22, 32);
+            background-color: rgba(253, 253, 253, 0.75);
+            border-radius: 4px;
         }
         > .input {
             padding: 6px 8px;
@@ -310,6 +323,14 @@ a {
             flex-direction: row;
             justify-content: center;
             width: 100%;
+            height: 65px;
+            transition: opacity .1s linear 0s, height .3s cubic-bezier(.34, .99, .47, 1), padding .2s linear 0s;
+            &.disabled {
+                padding: 0px 8px;
+                opacity: 0;
+                height: 0px;
+                transition: opacity .1s linear 0s, height .3s cubic-bezier(.34, .99, .47, 1), padding .2s linear 0s;
+            }
             
             *[disabled="true"] {
                 user-zoom: none;
@@ -1020,6 +1041,10 @@ a {
     
             > #mgcheck {
                 user-select: none;
+
+                &.f-w {
+                    width: 100%;
+                }
     
                 > input[type="checkbox"] {
                     display: none;
@@ -1058,6 +1083,81 @@ a {
                         transition: padding .15s cubic-bezier(.45, 1.20, .45, 1.26), border .15s ease;
                         border: 2px solid transparent;
                     }
+                }
+
+                > .cover {
+                    position: relative;
+                    z-index: 0;
+                    > img {
+                        width: 100%;
+                        height: 145px;
+                        object-fit: cover;
+                        object-position: center center;
+                    }
+                }
+
+                > .profile {
+                    position: relative;
+                    z-index: 1;
+                    width: 100%;
+                    > .row {
+
+                        > img {
+                            display: block;
+                            width: 120px;
+                            height: 120px;
+                            margin: -50px 15px 10px 20px;
+                            object-fit: cover;
+                            object-position: center center;
+                            border-radius: 50%;
+                            border: 4px solid white;
+                        }
+
+                        .name {
+                            padding: 5px 7px;
+                            display: inline-block;
+                            width: fit-content;
+                            height: fit-content;
+                            font-family: "Open Sans";
+                            font-size: 22px;
+                            font-weight: 700;
+                            color: rgb(20, 20, 20);
+                            &:hover {
+                                color: rgb(105, 162, 253);
+                            }
+                        }
+
+                        .id {
+                            display: inline-block;
+                            width: fit-content;
+                            font-family: "Roboto";
+                            font-size: 15px;
+                            font-weight: 500;
+                            color: black;
+                            padding: 6px 10px;
+                            background-color: rgba(255, 255, 255, 0.212);
+                            border-radius: 6px;
+                        }
+                    }
+
+                }
+                
+                .description {
+                    margin: 5px 35px;
+                    padding: 5px;
+                    > span {
+                        font-family: "Ubuntu";
+                        font-size: 15px;
+                        color: black;
+                        font-weight: 400;
+                        line-height: 1.65;
+                    }
+                }
+
+                > .row {
+                    border: 1px solid red;
+                    display: inline-block;
+                    width: 100%;
                 }
             }
         }
